mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:latest
        ports:
        - containerPort: 1883
        - containerPort: 8883
        volumeMounts:
        - name: mosquitto-config
          mountPath: /mosquitto/config
        - name: mosquitto-certs
          mountPath: /mosquitto/config/certs
      volumes:
      - name: mosquitto-config
        configMap:
          name: mosquitto-config
      - name: mosquitto-certs
        configMap:
          name: mosquitto-certs
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    protocol: TCP
    port: 1883
    targetPort: 1883
  - name: mqtt-tls
    protocol: TCP
    port: 8883
    targetPort: 8883
