route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mosquitto-route
spec:
  host: mqtt.khghaffa23.rahtiapp.fi
  port:
    targetPort: 8883
  to:
    kind: Service
    name: mosquitto-service
  tls:
    termination: passthrough
